--- a/_layouts/instrument.html
+++ b/_layouts/instrument.html
@@ -17,7 +17,7 @@
         <h4 class="mt-5">Construction</h4>
             <p><span class="text-muted">Status:</span>{{page.construction.status}}</p>
             <p><span class="text-muted">Started:</span>{{page.construction.date.start}}</p>
-            <p><span class="text-muted">Finished:</span>{{page.construction.end}}</p>
+            <p><span class="text-muted">Finished:</span>{{page.construction.date.end}}</p>
 
 
         <h4 class="mt-5">Neck</h4>
