--- a/_includes/detailHero.html
+++ b/_includes/detailHero.html
@@ -4,8 +4,7 @@
     background: url('{{ site.baseurl}}/assets/images/instruments/{{ page.images.header }}');    
     background-repeat: no-repeat;
 	background-position: bottom;
-	background-size:cover;
-	background-attachment: fixed;">
+	background-size:cover;">
         <div class="row mx-0 px-0">
             <div class="col-md-12 col-sm-12 col-xs-12 mt-25">
                 <h1 class="display-2 text-white font-weight-light py-3 text-uppercase text-center text-shadow">{{page.name}}</h1>
