--- a/_includes/imageGallery.html
+++ b/_includes/imageGallery.html
@@ -3,11 +3,47 @@
 <div class="image-gallery">
     {% for img in site.static_files %}
     {% if img.path contains imgBasePath %}
-    <div class="box">
+    <div class="box" id="gallery" data-toggle="modal" data-target="#exampleModal">
         <a href="{{ site.imagesurl }}{{ img.path }}">
-          <img src="{{ site.imagesurl }}{{ img.path }} " alt="{{img.path}}"  class="img-gallery" />
+          <img src="{{ site.imagesurl }}{{ img.path }} " alt="{{img.path}}"  class="img-gallery" data-target="#carouselExample"  />
          </a>
     </div>
     {% endif %}
     {% endfor %}
+
+
+    <!-- Modal markup: https://getbootstrap.com/docs/4.4/components/modal/ -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">×</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div id="carouselExample" class="carousel slide" data-ride="carousel">
+
+        {% for img in site.static_files %}
+        {% if img.path contains imgBasePath %}
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block w-100" src="src="{{ site.imagesurl }}{{ img.path }}">
+            </div>
+        {% endif %}
+        {% endfor %}
+        </div>
+      
+        
+      <!-- Carousel markup goes here -->
+
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+  </div>
   </div>
