--- a/_includes/imageGallery.html
+++ b/_includes/imageGallery.html
@@ -10,7 +10,7 @@
     </div>
     {% endif %}
     {% endfor %}
-
+</div>
 
     <!-- Modal markup: https://getbootstrap.com/docs/4.4/components/modal/ -->
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-hidden="true">
