--- a/_layouts/tex.html
+++ b/_layouts/tex.html
@@ -80,7 +80,7 @@
   {{page.construction.body.material }}. \\
   {% if page.construction.top %}
       {{page.construction.top.thickness}} top in  
-      {{page.construction.top.material}.\\
+      {{page.construction.top.material}}.\\
   {% endif %}
 
 \paragraph{Electronics}
