--- a/_layouts/tex.html
+++ b/_layouts/tex.html
@@ -89,7 +89,7 @@
     {{page.construction.electronics.pickups}}
 
 \paragraph{Finish}
-  {{page.construction.finish}
+  {{page.construction.finish}}
 
 \paragraph{Hardware}
   Strap lock: {{page.construction.hardware.locks}} \\
